--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "line-gpt-bot",
+  "name": "aion-website-ai-backend",
   "version": "1.0.0",
-  "description": "LINE Bot with GPT on Render",
+  "description": "AI Backend for AION Info Website",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@line/bot-sdk": "^8.4.1",
     "express": "^4.19.2",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "cors": "^2.8.5"
   }
 }
+
